--- a/todo/templates/todo/log_in.html
+++ b/todo/templates/todo/log_in.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-{% load crispy_forms_tags %}
+    {% load crispy_forms_tags %}
 
     <div class="m-3">
 
@@ -12,7 +12,7 @@
 
     {{ form|crispy }}
 
-    <button type="submit" class="btn btn-primary m-3">Sign Up</button>
+    <button type="submit" class="btn btn-primary m-3">Log In</button>
 
     </form>
 
