--- a/todo/templates/todo/base.html
+++ b/todo/templates/todo/base.html
@@ -46,7 +46,7 @@
       <!-- Left links -->
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="#">Home</a>
+          <a class="nav-link" href="{% url 'homepage' %}">Home</a>
         </li>
       </ul>
       <!-- Left links -->
@@ -61,6 +61,9 @@
         </button>
       {% endif %}
       {% if user.is_authenticated %}
+          <button type="button" class="btn btn-primary me-3">
+            <a class='link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover' href="{% url 'create_task' %}">Add Task</a>
+        </button>
       <button type="button" class="btn btn-link px-3 me-2">
           <a class='link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover' href="{% url 'logout' %}">Logout</a>
         </button>
